# stock_market_analysis

./: main.py  pyproject.toml
app/data/: stock_market.json
app/stocks/: stock_market.py  stock_market_share_dist.py
