[project]
name = "stock-market-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "yfinance>=0.2.40",
    "matplotlib>=3.8.0",
    "streamlit>=1.39.0",
    "altair>=5.0.0,<6.0.0",
]
